[REFACTOR]: Rename exception handlers and improve code